--- a/index.htm
+++ b/index.htm
@@ -53,7 +53,7 @@ serviços, litígio, processo, justiça, proteção">
     </div>
     <div class="w3-padding-24">
       <!-- <a href="#" class="w3-button w3-white w3-block w3-hover-blue-grey w3-padding-16">Home</a> -->
-      <a href="#work" class="w3-button w3-white w3-block w3-hover-orange w3-padding-16">O Trabalho</a>
+      <a href="#work" class="w3-button w3-white w3-block w3-hover-orange w3-padding-16">Trabalho</a>
       <a href="#work" class="w3-button w3-white w3-block w3-hover-dark-red w3-padding-16">Atuação</a>
       <a href="#contact" class="w3-button w3-white w3-block w3-hover-blue w3-padding-16">Contato</a>
     </div>
@@ -66,10 +66,12 @@ serviços, litígio, processo, justiça, proteção">
 
       <p>Escritório de advocacia do Dr. Jamil Soni Jr.</p>
 
+      <p>Formado pela <strong>Pontifícia Universidade Católica do Paraná</strong>
+      (<a href="https://www.pucpr.br/"><abbr title="Pontifícia Universidade Católica do Paraná.">PUC-PR</abbr></a>)
+      e experiência de mais de 20 anos nas áreas de direito civil e de família.</p>
 
 
 
-        <p>Lorem ipusm sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
         <p>Lorem ipusm sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
       </div>
     </div>
@@ -82,18 +84,15 @@ serviços, litígio, processo, justiça, proteção">
     <div class="w3-padding-64">
       <h2>Nosso Trabalho</h2>
       <div class="w3-padding">
-      <p>Formado pela <strong>Pontifícia Universidade Católica do Paraná</strong>
-      (<a href="https://www.pucpr.br/"><abbr title="Pontifícia Universidade Católica do Paraná.">PUC-PR</abbr></a>)
-      e experiência de mais de 20 anos nas áreas de direito civil e de família.</p>
       
       <p>Aconselhamento e consultoria 
       de pessoas civis e jurídicas.</p>
 
-	<p></p>
-
       <p>Com experiência e determinação, empenhamo-nos no estudo
       dos casos de nossos clientes.
       Sempre dispotos a resolver seus problemas da melhor forma.</p>
+
+        <p>Lorem ipusm sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
       </div>
     </div>
     <div class="w3-row">
@@ -229,7 +228,7 @@ serviços, litígio, processo, justiça, proteção">
 <address class="h-card">
 
 	<div class="minw">
-	<ul>
+	<ul style="list-style-type:none;"
 		<li><span title="Advogado"class="p-honorific-suffix">Dr.</span> <span class="p-name">Jamil Soni Jr</span></li>
 		<li>Rua Osório Ribas de Paula, 824</li>
 		<li>86800-140</li>
