--- a/index.htm
+++ b/index.htm
@@ -53,9 +53,9 @@ serviços, litígio, processo, justiça, proteção">
     </div>
     <div class="w3-padding-24">
       <!-- <a href="#" class="w3-button w3-white w3-block w3-hover-blue-grey w3-padding-16">Home</a> -->
-      <a href="#work" class="w3-button w3-white w3-block w3-hover-orange w3-padding-16">Trabalho</a>
-      <a href="#work" class="w3-button w3-white w3-block w3-hover-dark-red w3-padding-16">Atuação</a>
-      <a href="#contact" class="w3-button w3-white w3-block w3-hover-blue w3-padding-16">Contato</a>
+      <a href="#trabalho" class="w3-button w3-white w3-block w3-hover-orange w3-padding-16">Trabalho</a>
+      <a href="#trabalho" class="w3-button w3-white w3-block w3-hover-dark-red w3-padding-16">Atuação</a>
+      <a href="#contato" class="w3-button w3-white w3-block w3-hover-blue w3-padding-16">Contato</a>
     </div>
   </div>
   <div class="w3-half w3-blue-grey w3-container" style="height:800px">
@@ -80,7 +80,7 @@ serviços, litígio, processo, justiça, proteção">
 
 <!-- Second Grid: Work & Resume -->
 <div class="w3-row">
-  <div class="w3-half w3-light-grey w3-center" style="min-height:800px" id="work">
+  <div class="w3-half w3-light-grey w3-center" style="min-height:800px" id="trabalho">
     <div class="w3-padding-64">
       <h2>Nosso Trabalho</h2>
       <div class="w3-padding">
@@ -212,7 +212,7 @@ serviços, litígio, processo, justiça, proteção">
 </div>
 
 <!-- Third Grid: Swing By & Contact -->
-<div class="w3-row" id="contact">
+<div class="w3-row" id="contato">
   <div class="w3-half w3-dark-grey w3-container w3-center" style="height:700px">
     <div class="w3-padding-64" style="padding-bottom:16px!important;">
       <h1>Localização</h1>
