--- a/index.htm
+++ b/index.htm
@@ -19,13 +19,38 @@ serviços, litígio, processo, justiça, proteção">
 
 
 <style>
-	.minw
+	.l01
 	{
 		display: table-cell;
 		width: auto;
-		min-width: 36%;
-		max-width: 100%;
-		word-wrap: normal;
+		/* min-width: 36%; */
+		/* max-width: 100%; */
+		min-width: 50%;
+		/* word-wrap: normal; */
+		list-style-type: none;
+		/* text-align: left; */
+	}
+
+	.t01 th,
+	.t01 td
+	{
+		text-align: center;
+	}
+
+	.t01 td:nth-of-type(3)
+	{
+		text-align: left;
+		text-align: justify; text-justify: inter-word;
+
+		-webkit-hyphens: auto;
+		-ms-hyphens: auto;
+		hyphens: auto;
+	}
+
+
+	.t01 td 
+	{
+		vertical-align: middle;
 	}
 
 	td img
@@ -127,10 +152,9 @@ serviços, litígio, processo, justiça, proteção">
       <h2>Atuação</h2>
       <p>Atuação profissional jurídica.</p>
       <div class="w3-container w3-responsive">
-        <table class="w3-table">
+        <table class="w3-table t01">
           <tr>
-            <th><!-- ícones --></th>
-            <th>Área</th>
+            <th colspan="2">Área</th>
             <th>Descrição</th>
           </tr>
 
@@ -227,8 +251,8 @@ serviços, litígio, processo, justiça, proteção">
 <!-- Location -->
 <address class="h-card">
 
-	<div class="minw">
-	<ul style="list-style-type:none;"
+	<div>
+	<ul class="l01">
 		<li><span title="Advogado"class="p-honorific-suffix">Dr.</span> <span class="p-name">Jamil Soni Jr</span></li>
 		<li>Rua Osório Ribas de Paula, 824</li>
 		<li>86800-140</li>
@@ -241,6 +265,7 @@ serviços, litígio, processo, justiça, proteção">
 	</div>
 </address>
 
+	<br>
       <div class="w3-center">
       	<a target="_blank" href="https://goo.gl/maps/zeAJ2sZpm8QRJxN1A"><img src="gfx/mapaSmaller.png" style="max-width:520px;height:auto;" alt="Mapa da região" width="320" height="225"></a>
 	</div>
