--- a/index.htm
+++ b/index.htm
@@ -19,15 +19,10 @@ serviços, litígio, processo, justiça, proteção">
 
 
 <style>
-	.l01
+	.h-card
 	{
-		display: table-cell;
-		width: auto;
-		/* min-width: 36%; */
-		/* max-width: 100%; */
-		min-width: 50%;
-		/* word-wrap: normal; */
-		list-style-type: none;
+		padding: .4em .2em .4em 2em;
+		display: block;
 		/* text-align: left; */
 	}
 
@@ -251,21 +246,16 @@ serviços, litígio, processo, justiça, proteção">
 <!-- Location -->
 <address class="h-card">
 
-	<div>
-	<ul class="l01">
-		<li><span title="Advogado"class="p-honorific-suffix">Dr.</span> <span class="p-name">Jamil Soni Jr</span></li>
-		<li>Rua Osório Ribas de Paula, 824</li>
-		<li>86800-140</li>
-		<li class="p-locality">Apucarana, PR</li>
-		<li class="p-country-name">Brasil</li>
-		<li class="u-email"><a href="mailto:jsonijr@gmail.com">jsonijr@gmail.com</a></li>
-      		<li>☎ 43 3033-1020</li>
-		<!-- ✆☎☏ -->
-	</ul>
-	</div>
+	<p><span title="Advogado"class="p-honorific-suffix">Dr.</span> <span class="p-name">Jamil Soni Jr</span></p>
+	<p>Rua Osório Ribas de Paula, 824</p>
+	<p>86800-140</p>
+	<p class="p-locality">Apucarana, PR</p>
+	<p class="p-country-name">Brasil</p>
+	<p class="u-email"><a href="mailto:jsonijr@gmail.com">jsonijr@gmail.com</a></p>
+	<p>☎ 43 3033-1020</p>
+	<!-- ✆☎☏ -->
 </address>
 
-	<br>
       <div class="w3-center">
       	<a target="_blank" href="https://goo.gl/maps/zeAJ2sZpm8QRJxN1A"><img src="gfx/mapaSmaller.png" style="max-width:520px;height:auto;" alt="Mapa da região" width="320" height="225"></a>
 	</div>
