--- a/index.htm
+++ b/index.htm
@@ -17,6 +17,7 @@ serviços, litígio, processo, justiça, proteção">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/w3.css">
 
+	<!-- TODOS OS DIREITOS RESERVADOS -->
 
 <style>
 	.h-card
@@ -42,8 +43,15 @@ serviços, litígio, processo, justiça, proteção">
 		text-align: center;
 	}
 
-	#t01 td:nth-of-type(3)
+	#t01 td 
 	{
+		vertical-align: middle;
+	}
+
+	#t01 td:nth-child(3)
+	{
+		padding-right: 1.6em;
+
 		text-align: left;
 		text-align: justify; text-justify: inter-word;
 
@@ -52,14 +60,9 @@ serviços, litígio, processo, justiça, proteção">
 		hyphens: auto;
 	}
 
-	#t01 td 
-	{
-		vertical-align: middle;
-	}
-
 	#t01 td img
 	{
-		max-width: 80px;
+		max-width: 60px;
 		height: auto;
 
 		/* transform: scale(.6,.6); */
@@ -93,7 +96,7 @@ serviços, litígio, processo, justiça, proteção">
     <div class="w3-padding-24">
       <!-- <a href="#" class="w3-button w3-white w3-block w3-hover-blue-grey w3-padding-16">Home</a> -->
       <a href="#trabalho" class="w3-button w3-white w3-block w3-hover-orange w3-padding-16">Trabalho</a>
-      <a href="#trabalho" class="w3-button w3-white w3-block w3-hover-dark-red w3-padding-16">Atuação</a>
+      <a href="#atuacao" class="w3-button w3-white w3-block w3-hover-dark-red w3-padding-16">Atuação</a>
       <a href="#contato" class="w3-button w3-white w3-block w3-hover-blue w3-padding-16">Contato</a>
     </div>
   </div>
@@ -161,7 +164,7 @@ serviços, litígio, processo, justiça, proteção">
     </div><br>
     <p>Nossos escritórios.</p>
   </div>
-  <div class="w3-half w3-indigo w3-container" style="min-height:800px">
+  <div class="w3-half w3-indigo w3-container" style="min-height:800px" id="atuacao">
     <div class="w3-padding-64 w3-center">
       <h2>Atuação</h2>
       <p>Atuação profissional jurídica.</p>
@@ -173,7 +176,7 @@ serviços, litígio, processo, justiça, proteção">
           </tr>
 
           <tr class="w3-white">
-            <td><img src="gfx/civil-small.png" alt="ícone ilustrativo" width="78" height="78"></td>
+            <td><img src="gfx/civil.png" alt="ícone ilustrativo" width="128" height="128"></td>
             <td>Direito Civil</td>
             <td><strong>Direito civil</strong> é um ramo do Direito que trata do conjunto de normas
 	    reguladoras dos direitos e obrigações de ordem privada concernente às pessoas,
@@ -209,7 +212,7 @@ serviços, litígio, processo, justiça, proteção">
 
 
           <tr class="w3-white">
-            <td><img src="gfx/family-small.png" alt="ícone ilustrativo" width="78" height="107"></td>
+            <td><img src="gfx/family.png" alt="ícone ilustrativo" width="128" height="175"></td>
             <td>Direito de Família</td>
             <td><strong>Direito de família</strong> é um ramo do direito que trata das questões
 	    e litígios entre entes da comunidade familiar. Possui normas jurídicas
@@ -261,7 +264,7 @@ serviços, litígio, processo, justiça, proteção">
 	<!-- Location -->
 	<address class="h-card">
 
-		<p><span title="Advogado"class="p-honorific-suffix">Dr.</span> <span class="p-name">Jamil Soni Jr</span></p>
+		<p><span title="Advogado" class="p-honorific-suffix">Dr.</span> <span class="p-name">Jamil Soni Jr</span></p>
 		<p>Rua Osório Ribas de Paula, 824</p>
 		<p>86800-140</p>
 		<p class="p-locality">Apucarana, PR</p>
@@ -276,13 +279,14 @@ serviços, litígio, processo, justiça, proteção">
 	</div>
     </div>
   </div>
+
   <div class="w3-half w3-orange w3-container" style="height:700px">
     <div class="w3-padding-64 w3-padding-large bigger">
       <h2>Problema Jurídico?</h2>
       <p class="w3-opacity">VAMOS REPENSAR ESSA IDEIA!</p>
 
 	<br>
-      <div class="w3-container w3-card w3-padding-32 w3-white" action="https://www.w3schools.com/action_page.php" target="_blank">
+      <div class="w3-container w3-card w3-padding-32 w3-white">
         <div class="w3-section">
 		<!-- <p>Nosso pensamento é com o cliente e
 		para frente.</p> -->
@@ -291,7 +295,7 @@ serviços, litígio, processo, justiça, proteção">
 		<br>
 		<p>Agende uma reunião conosco!</p>
 
-        <!-- <button type="submit" class="w3-button w3-orange w3-right"></button> -->
+	</div>
       </div>
     </div>
   </div>
