--- a/index.htm
+++ b/index.htm
@@ -16,6 +16,7 @@ serviços, litígio, processo, justiça, proteção">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/w3.css">
+<link rel="stylesheet" href="css/style_microfmt.css">
 
 	<!-- TODOS OS DIREITOS RESERVADOS -->
 
@@ -77,6 +78,17 @@ serviços, litígio, processo, justiça, proteção">
 	}
 
 </style>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q5YEBTHRNN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Q5YEBTHRNN');
+</script>
+
 </head>
 
 
@@ -265,12 +277,12 @@ serviços, litígio, processo, justiça, proteção">
 	<address class="h-card">
 
 		<p><span title="Advogado" class="p-honorific-suffix">Dr.</span> <span class="p-name">Jamil Soni Jr</span></p>
-		<p>Rua Osório Ribas de Paula, 824</p>
-		<p>86800-140</p>
+		<p class="p-street-address p-adr">Rua Osório Ribas de Paula, 824</p>
+		<p class="p-postal-code">86800-140</p>
 		<p class="p-locality">Apucarana, PR</p>
 		<p class="p-country-name">Brasil</p>
-		<p class="u-email"><a href="mailto:jsonijr@gmail.com">jsonijr@gmail.com</a></p>
-		<p>☎ 43 3033-1020</p>
+		<!-- <p class="u-email"><a href="mailto:jsonijr@gmail.com">jsonijr@gmail.com</a></p> -->
+		<!-- <p class="p-tel">☎ 43 3033-1020</p> -->
 		<!-- ✆☎☏ -->
 	</address>
 
@@ -292,9 +304,16 @@ serviços, litígio, processo, justiça, proteção">
 		para frente.</p> -->
 		<p>Se você precisa de ajuda, sente-se injustiçada
 		ou desmoralizada, procure um advogado. Ele pode ajudar.</p>
+
 		<br>
 		<p>Agende uma reunião conosco!</p>
 
+		<br>
+		<address class="h-card">
+
+			<p class="u-email"><a href="mailto:jsonijr@gmail.com">jsonijr@gmail.com</a></p>
+			<p class="p-tel">☎ 43 3033-1020</p>
+		</address>
 	</div>
       </div>
     </div>
