--- a/index.htm
+++ b/index.htm
@@ -126,7 +126,6 @@ serviços, litígio, processo, justiça, proteção">
 
 
 
-        <p>Lorem ipusm sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
       </div>
     </div>
   </div>
@@ -139,14 +138,12 @@ serviços, litígio, processo, justiça, proteção">
       <h2>Nosso Trabalho</h2>
       <div class="w3-padding">
       
-      <p>Aconselhamento e consultoria 
-      de pessoas civis e jurídicas.</p>
-
       <p>Com experiência e determinação, empenhamo-nos no estudo
       dos casos de nossos clientes.
       Sempre dispotos a resolver seus problemas da melhor forma.</p>
 
-        <p>Lorem ipusm sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+      <p>Conte também com aconselhamento e
+      consultoria de pessoas civis e jurídicas.</p>
       </div>
     </div>
     <div class="w3-row">
