--- a/index.htm
+++ b/index.htm
@@ -14,6 +14,16 @@ serviços, litígio, processo, justiça, proteção">
 <link rel="canonical" href="https://jsonijr.github.io/">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
+    <meta property="og:url" content="https://jsonijr.github.io">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Advocacia Jamil Soni Jr.">
+    <meta property="og:image"
+          content="/gfx/balanca.jpg">
+    <meta property="og:description" content="Página do escritório de advocacia
+    do Dr. Jamil. Visite https://jsonijr.github.io">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:image:alt" content="/gfx/balanca.jpg">
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/w3.css">
 <link rel="stylesheet" href="css/style_microfmt.css">
