--- a/index.htm
+++ b/index.htm
@@ -18,11 +18,11 @@ serviços, litígio, processo, justiça, proteção">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Advocacia Jamil Soni Jr.">
     <meta property="og:image"
-          content="/gfx/balanca.jpg">
+          content="gfx/balanca.jpg">
     <meta property="og:description" content="Página do escritório de advocacia
     do Dr. Jamil. Visite https://jsonijr.github.io">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:image:alt" content="/gfx/balanca.jpg">
+    <meta name="twitter:image:alt" content="gfx/balanca.jpg">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/w3.css">
