--- a/index.htm
+++ b/index.htm
@@ -22,7 +22,7 @@ serviços, litígio, processo, justiça, proteção">
     <meta property="og:description" content="Página do escritório de advocacia
     do Dr. Jamil. Visite https://jsonijr.github.io">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:image:alt" content="gfx/balanca.jpg">
+    <meta name="twitter:image:alt" content="Balança (Justiça)">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/w3.css">
