--- a/index.htm
+++ b/index.htm
@@ -335,7 +335,25 @@ serviços, litígio, processo, justiça, proteção">
   		Todos os direitos reservados<sup>©</sup></p>
 	</div>
 
+
   <!-- <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p> -->
+
+
+<!--
+- - - -	Copyright ©2021 JSN.
+ - - -	Verbatim copying and distribution of this entire article is
+- - - -	permitted in any medium, provided this notice is preserved.
+-->
+
+<!--
+- - - -	Legal Mumbo Jumbo
+- - - -	You are free to copy or repost any or part of these
+- - - -	blogs, as long as the proper attribution is given.
+- - - -	A heads-up is always appreciated.
+- - - -	The opinions expressed are mine and my own and they
+- - - -	do not represent my employer or company opinions.
+-->
+
 </footer>
 
 </body>
