--- a/index.htm
+++ b/index.htm
@@ -17,10 +17,8 @@ serviços, litígio, processo, justiça, proteção">
     <meta property="og:url" content="https://jsonijr.github.io">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Advocacia Jamil Soni Jr.">
-    <meta property="og:image"
-          content="gfx/balanca.jpg">
-    <meta property="og:description" content="Página do escritório de advocacia
-    do Dr. Jamil. Visite https://jsonijr.github.io">
+    <meta property="og:image" content="https://jsonijr.github.io/gfx/balanca.jpg">
+    <meta property="og:description" content="Página do escritório de advocacia do Dr. Jamil. Visite https://jsonijr.github.io">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:image:alt" content="Balança (Justiça)">
     <!-- https://ogp.me/ -->
