--- a/sitemap.html
+++ b/sitemap.html
@@ -2,10 +2,12 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<title>Website map, navigate to all pages</title>
+<title>Mapa do Site - Escritório de Advocacia</title>
 <meta name="resource-type" content="document">
-<meta name="description" content="Site map for human visitors; this navigation page may be preferable for some people to use">
-<meta name="keywords" content="navigation, navegação, accessibility, acessibilidade, interface, alternativo, alternative, user navigation, navegação de usuário, discover the webste, descubra o website">
+<meta name="description" content="Mapa do site.">
+<meta name="keywords" content="navigation, navegação, accessibility,
+acessibilidade, interface, alternativo, alternative, user navigation,
+navegação de usuário, discover the webste, descubra o website">
 <meta name="distribution" content="global">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- <link rev="made" href="mailto:jamilbio20[[at]]gmail[[dot]]com"> -->
@@ -40,6 +42,7 @@
 <body>
 	<h1>Sitemap</h1><p>
 	<a class="NORM" href=".">.</a><br>
+	└── <a class="NORM" href="./index.htm">index.htm</a><br>
 	<br><br>
 	</p>
 	<p>
