--- a/sitemap.html
+++ b/sitemap.html
@@ -40,9 +40,9 @@ navegação de usuário, discover the webste, descubra o website">
  </style>
 </head>
 <body>
-	<h1>Sitemap</h1><p>
+	<h1>Mapa do sítio</h1><p>
 	<a class="NORM" href=".">.</a><br>
-	└── <a class="NORM" href="./index.htm">index.htm</a><br>
+	└── <a class="NORM" href="./index.html">index.html</a><br>
 	<br><br>
 	</p>
 	<p>
