--- a/sitemap.html
+++ b/sitemap.html
@@ -11,7 +11,7 @@ navegação de usuário, discover the webste, descubra o website">
 <meta name="distribution" content="global">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- <link rev="made" href="mailto:jamilbio20[[at]]gmail[[dot]]com"> -->
-<link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <style>
 	H1, H1 + P
 	{
